force-app/main/default/objects/Feedback_Response__c/Feedback_Response__c.object-meta.xml
<CustomObject>
    <label>Feedback Response</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Feedback Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>