force-app/main/default/objects/Feedback_Response__c/fields/Question_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Question_Lookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question Lookup</label>
    <referenceTo>Feedback_Question__c</referenceTo>
    <relationshipLabel>Feedback Responses</relationshipLabel>
    <relationshipName>Feedback_Responses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>