force-app/main/default/objects/Feedback_Response__c/fields/Rating_Answer__c.field-meta.xml
<CustomField>
    <fullName>Rating_Answer__c</fullName>
    <description>Manager/employee answer for the question</description>
    <label>Rating/Answer</label>
    <length>500</length>
    <type>Html</type>
</CustomField>