force-app/main/default/objects/Feedback_Response__c/fields/Respondent__c.field-meta.xml
<CustomField>
    <fullName>Respondent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who is being evaluated</description>
    <label>Respondent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>user_who_is_respondent</relationshipName>
    <type>Lookup</type>
</CustomField>