force-app/main/default/objects/Feedback_Response__c/fields/Responder__c.field-meta.xml
<CustomField>
    <fullName>Responder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User submitting the answer to the feedback question</description>
    <label>Responder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feedback_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>