force-app/main/default/objects/Feedback_Response__c/fields/Responder_Name__c.field-meta.xml
<CustomField>
    <fullName>Responder_Name__c</fullName>
    <formula>Responder__r.FirstName &amp; &quot; &quot; &amp; Responder__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responder Name</label>
    <type>Text</type>
</CustomField>