force-app/main/default/objects/Feedback_Response__c/fields/Responder_Profile__c.field-meta.xml
<CustomField>
    <fullName>Responder_Profile__c</fullName>
    <formula>Responder__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responder Profile</label>
    <type>Text</type>
</CustomField>